--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -101,10 +101,11 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.ballroom</groupId>
-            <artifactId>code-generator</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.jboss.as</groupId>
+            <artifactId>console-spi</artifactId>
+            <version>${version}</version>
         </dependency>
+
     </dependencies>
 
     <!-- Plugins -->
@@ -186,27 +187,27 @@
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
-                    <generatedSourcesDirectory>${project.build.directory}/generated-sources</generatedSourcesDirectory>
-                    <compilerArgument>-Aballroom.extension.class=org.jboss.as.console.client.core.gin.PluginContainer</compilerArgument>
                 </configuration>
             </plugin>
 
             <plugin>
-                <groupId>org.jboss.ballroom</groupId>
-                <artifactId>code-generator</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <groupId>org.bsc.maven</groupId>
+                <artifactId>maven-processor-plugin</artifactId>
                 <executions>
                     <execution>
-                        <phase>process-classes</phase>
+                        <id>process</id>
                         <goals>
-                            <goal>process-template</goal>
+                            <goal>process</goal>
                         </goals>
-                        <id>Generate Plugins Module</id>
+                        <phase>generate-sources</phase>
                         <configuration>
-                            <addToBuildPath>true</addToBuildPath>
-                            <processor>org.jboss.as.console.spi.SubsystemExtensions</processor>
-                            <template>src/main/templates/SubsystemExtensions.tmpl</template>
-                            <targetFile>${project.build.directory}/classes/org/jboss/as/console/client/shared/SubsystemExtensions.java</targetFile>
+                            <options>
+                                <console.spi.extension.class>org.jboss.as.console.client.core.gin.PluginContainer</console.spi.extension.class>
+                            </options>
+                            <processors>
+                                <processor>org.jboss.as.console.spi.GinModuleProcessor</processor>
+                                <processor>org.jboss.as.console.spi.SubsystemProcessor</processor>
+                            </processors>
                         </configuration>
                     </execution>
                 </executions>
