--- a/spi/pom.xml
+++ b/spi/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>jboss-as-console-parent</artifactId>
         <groupId>org.jboss.as</groupId>
-        <version>1.2.0.Final</version>
+        <version>1.3.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
