--- a/spi/pom.xml
+++ b/spi/pom.xml
@@ -4,9 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <artifactId>jboss-as-console-parent</artifactId>
         <groupId>org.jboss.as</groupId>
+        <artifactId>jboss-as-console-parent</artifactId>
         <version>1.3.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
