--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -214,6 +214,7 @@
                             <processors>
                                 <processor>org.jboss.as.console.spi.ExtensionProcessor</processor>
                                 <processor>org.jboss.as.console.spi.ExtensionBindingProcessor</processor>
+                                <processor>org.jboss.as.console.spi.BeanFactoryProcessor</processor>
                                 <processor>org.jboss.as.console.spi.SubsystemProcessor</processor>
                             </processors>
                         </configuration>
