--- a/pom.xml
+++ b/pom.xml
@@ -83,108 +83,14 @@
     </licenses>
 
     <properties>
-        <gwt.version>2.3.2-redhat</gwt.version>
-        <gwtp.version>0.6</gwtp.version>
-        <gwt.maven>2.3.0</gwt.maven>
-        <gwt-log.version>3.1.3</gwt-log.version>
-        <gwt-vis.version>1.1.1</gwt-vis.version>
-        <junit.version>4.8.1</junit.version>
-
-        <gin.version>1.5_past22</gin.version>
-        <guice.version>3.0</guice.version>
-
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <modules>
+        <module>bom</module>
         <module>spi</module>
         <module>gui</module>
-        <!--module>testsuite</module-->
     </modules>
-
-    <dependencyManagement>
-        <dependencies>
-
-            <!-- GWT related -->
-            <dependency>
-                <groupId>com.google.gwt</groupId>
-                <artifactId>gwt-servlet</artifactId>
-                <version>${gwt.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.google.gwt</groupId>
-                <artifactId>gwt-dev</artifactId>
-                <version>${gwt.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.google.gwt</groupId>
-                <artifactId>gwt-user</artifactId>
-                <version>${gwt.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>javax.validation</groupId>
-                <artifactId>validation-api</artifactId>
-                <version>1.0.0.GA</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>javax.validation</groupId>
-                <artifactId>validation-api</artifactId>
-                <version>1.0.0.GA</version>
-                <classifier>sources</classifier>
-                <scope>provided</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>com.google.code</groupId>
-                <artifactId>gwt-visualization</artifactId>
-                <version>${gwt-vis.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.google.code.gwt-log</groupId>
-                <artifactId>gwt-log</artifactId>
-                <version>${gwt-log.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>${junit.version}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                 <groupId>com.gwtplatform</groupId>
-                 <artifactId>gwtp-mvp-client</artifactId>
-                 <version>${gwtp.version}</version>
-                 <scope>provided</scope>
-               </dependency>
-
-
-            <dependency>
-                <groupId>com.google.inject</groupId>
-                <artifactId>guice</artifactId>
-                <version>${guice.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.google.inject.extensions</groupId>
-                <artifactId>guice-assistedinject</artifactId>
-                <version>${guice.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.google.gwt.inject</groupId>
-                <artifactId>gin</artifactId>
-                <version>${gin.version}</version>
-            </dependency>
-
-        </dependencies>
-    </dependencyManagement>
 
     <build>
         <plugins>
