rely on custom annotation processor plugin: allows to specify multiple source directories

--- a/example-extension/pom.xml
+++ b/example-extension/pom.xml
@@ -245,6 +245,7 @@
             <plugin>
                 <groupId>org.bsc.maven</groupId>
                 <artifactId>maven-processor-plugin</artifactId>
+                <version>2.0.6-SNAPSHOT</version>
                 <executions>
                     <execution>
                         <id>process</id>
@@ -253,7 +254,6 @@
                         </goals>
                         <phase>generate-sources</phase>
                         <configuration>
-                            <sourceDirectory>${basedir}/target/imported-sources</sourceDirectory>
                             <outputDiagnostics>false</outputDiagnostics>
                             <processors>
                                 <processor>org.jboss.as.console.spi.ExtensionProcessor</processor>
