--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -207,6 +207,7 @@
             <plugin>
                 <groupId>org.bsc.maven</groupId>
                 <artifactId>maven-processor-plugin</artifactId>
+                <version>2.0.6-SNAPSHOT</version>
                 <executions>
                     <execution>
                         <id>process</id>
