--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@ target
 build.number
 *.bak
 
+example-extension/WEB-INF
+example-extension/war/WEB-INF
+example-extension/war/app
+example-extension/war/dmr_gwt
+example-extension/src/main/java/org/jboss/as/console/App.gwt.xml
+example-extension/src/main/java/upload-proxy.properties
+example-extension/src/main/java/gwt-proxy.properties
+
 gui/war/WEB-INF
 gui/war/app
 gui/war/dmr_gwt
