--- a/example-extension/pom.xml
+++ b/example-extension/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
     <modelVersion>4.0.0</modelVersion>
-    <name>JBoss 7 - Management Console :: GUI</name>
+    <name>Foobar Example Extension</name>
     <groupId>org.jboss.as</groupId>
     <artifactId>example-extension</artifactId>
     <packaging>war</packaging>
