--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_zh_Hans.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_zh_Hans.properties
@@ -13,7 +13,8 @@ common_label_addContent=\u6DFB\u52A0\u5185\u5BB9
 common_label_addItem=\u6DFB\u52A0\u6761\u76EE
 common_label_addProperty=\u6DFB\u52A0\u5C5E\u6027
 common_label_addToGroup=\u6DFB\u52A0\u5230\u7EC4\u91CC
-common_label_addToGroups=\u6DFB\u52A0\u5230\u7EC4\u91CC
+common_label_addToGroups=\u6DFB\u52A0\u5230\u7EC4\u91CCAdd to Groups
+common_label_updateContent=Update Content
 common_label_advanced=\u9AD8\u7EA7\u7684Advanced
 common_label_append=Append
 common_label_areYouSure=\u4F60\u786E\u5B9A\u5417\uFF1F
